[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/HP_Bar.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/GiftDialog.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 10

[sub_resource type="DynamicFontData" id=3]
font_path = "res://UI/fonts/BerkshireSwash-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = SubResource( 3 )

[node name="GameHud" type="CanvasLayer"]
pause_mode = 2

[node name="HP_Bar" parent="." instance=ExtResource( 1 )]
margin_left = 7.0
margin_top = 127.0
margin_right = -173.0
margin_bottom = -3.0
rect_pivot_offset = Vector2( 30, 2.5 )
custom_styles/panel = SubResource( 1 )

[node name="GiftDialog" type="Panel" parent="."]
visible = false
margin_left = 10.6028
margin_top = 8.0
margin_right = 228.603
margin_bottom = 128.0
script = ExtResource( 2 )

[node name="WeaponText" type="RichTextLabel" parent="GiftDialog"]
margin_left = 6.0
margin_top = 21.0
margin_right = 90.0
margin_bottom = 90.0
custom_fonts/normal_font = SubResource( 2 )
text = "Shoot 32.4 cookies a second"

[node name="CurseText" type="RichTextLabel" parent="GiftDialog"]
margin_left = 127.0
margin_top = 22.0
margin_right = 211.0
margin_bottom = 89.0

[node name="Title" type="RichTextLabel" parent="GiftDialog"]
margin_left = 42.1049
margin_top = 1.01392
margin_right = 183.105
margin_bottom = 19.0139
custom_fonts/normal_font = SubResource( 4 )
text = "Will you open the gift?"
scroll_active = false

[node name="Open" type="Button" parent="GiftDialog"]
margin_left = 33.2891
margin_top = 96.0
margin_right = 94.2891
margin_bottom = 116.0
text = "Open It"

[node name="NoThanks" type="Button" parent="GiftDialog"]
margin_left = 116.686
margin_top = 94.6167
margin_right = 194.686
margin_bottom = 114.617
text = "No Thanks"

[node name="BigButs" type="RichTextLabel" parent="GiftDialog"]
margin_left = 98.4914
margin_top = 48.1081
margin_right = 131.491
margin_bottom = 67.1081
text = "but"
[connection signal="pressed" from="GiftDialog/Open" to="GiftDialog" method="_on_Open_pressed"]
[connection signal="pressed" from="GiftDialog/NoThanks" to="GiftDialog" method="_on_NoThanks_pressed"]
